tests/testdata/errors/break_outside_loop.pine
//@version=5
indicator("errors/break_outside_loop")
// Test break outside loop - should fail

var x = 10
break

// Expected error:
// error [break-outside-loop]: `break` is only valid inside a loop
